Veribani olusturuldu ve endpointler ve utils klasorleri olusturuldu

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://admin:O8nFaGNkgmqECECa@contactcluster.tugwbwz.mongodb.net/?retryWrites=true&w=majority&appName=contactCluster
+LISTEN_IP=45.84.191.83
+LISTEN_PORT=443
